Bring the handover up to date with the reviewed branch
The document described the branch as the overhaul sessions left it, and a
skeptical review of every changed file found claims that no longer match the
code. Corrected, with the evidence in each case:

  MonoDownmixer was described as "moved to common"; master has no such class, so
    it is new, and the real master bug was one shared queue across all speakers
  the HTTP module was credited with an endianness fix it never needed; its real
    master bugs were a shared BinaryMessage, sending on the pipeline thread, and
    returning false with no clients
  "without splitting emoji" only holds for surrogate pairs, not ZWJ sequences,
    skin-tone modifiers or flags
  "GL state saved/restored" is true of the four unpack parameters the code
    touches; SWAP_BYTES and LSB_FIRST cannot affect a GL_BGR/GL_UNSIGNED_BYTE
    upload at all
  "start opens the new session before stopping the old" holds for
    AbstractVideoPlayerCV only; VLCPlayer still stops first
  "IPv6 bracketing" had been applied to NettyHosting but not HttpHosting
  the MatImageBuffer.exchange caveat was backwards: an OpenCV ROI copies its
    parent's datastart, so it compares equal and is treated as shared
  "images have no player" is false, ImagePlayer exists
  FFmpegPlayerTest has two wall-clock assertions, not one

Added what the document omitted: the visible behaviour changes that belong in the
release notes (ResizeFilter interpolation, OverlayImageFilter compositing,
RectangleFilter bounds, BlurFilter hint, FPSFilter, narrowed constructors, new
argument validation), AudioRenderer's bounded drop-oldest queue, and the rest of
the PacketUtils rework.

Added section 5a for the defects this review found and fixed, and a list of the
ones it deliberately did not fix, so the next person does not rediscover them —
the installer's reliance on sun.misc.Unsafe on a modern JDK is the urgent one.

Replaced the verification and mutation figures with what was 